src/objects/fflbx__Lockbox__c.object
<CustomObject>
    <customHelpPage>fflbx__lockboxhelp</customHelpPage>
    <fields>
        <fullName>fflbx__AccountResolutionField__c</fullName>
        <inlineHelpText>This is an alternative field for finding customer records during the import process. You can use it to resolve issues with duplicate account names.</inlineHelpText>
        <label>Account Resolution Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fflbx__BankAccount__c</fullName>
        <label>Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipLabel>Bank Lockboxes</relationshipLabel>
        <relationshipName>Lockboxes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>fflbx__BankChargesGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Charges GLA</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Bank Lockboxes (Bank Charges GLA)</relationshipLabel>
        <relationshipName>BankChargesGLALockboxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fflbx__CashEntryProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Optional custom cash entry process if you are not using the standard cash entry routine.</inlineHelpText>
        <label>Cash Entry Process</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>fflbx__LockboxProcessSetting__c.fflbx__ProgramType__c</field>
                <operation>equals</operation>
                <value>Cash Entry</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>fflbx__LockboxProcessSetting__c</referenceTo>
        <relationshipLabel>Bank Lockboxes (Cash Entry Process)</relationshipLabel>
        <relationshipName>CashEntryProcessLockboxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fflbx__CashMatchingProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Optional custom cash matching process if you are not using the standard cash matching routine.</inlineHelpText>
        <label>Cash Matching Process</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>fflbx__LockboxProcessSetting__c.fflbx__ProgramType__c</field>
                <operation>equals</operation>
                <value>Cash Matching</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>fflbx__LockboxProcessSetting__c</referenceTo>
        <relationshipLabel>Bank Lockboxes (Cash Matching Process)</relationshipLabel>
        <relationshipName>CashMatchingProcessLockboxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fflbx__CurrencyWriteoffGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Write-off GLA</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Bank Lockboxes (Currency write-off GLA)</relationshipLabel>
        <relationshipName>CurrencywriteoffLockboxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fflbx__Currency__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Bank Lockboxes</relationshipLabel>
        <relationshipName>Lockboxes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fflbx__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fflbx__DiscountGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Discount GLA</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Bank Lockboxes (Discount GLA)</relationshipLabel>
        <relationshipName>DiscountGLALockboxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fflbx__DocumentResolutionFieldCRN__c</fullName>
        <inlineHelpText>Enter the API name of Sales Credit Note field you want to use to resolve the document on the AR Cash Transaction Line.</inlineHelpText>
        <label>Document Resolution Field (CRN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fflbx__DocumentResolutionFieldSIN__c</fullName>
        <inlineHelpText>Enter the API name of Sales Invoice field you want to use to resolve the document on the AR Cash Transaction Line.</inlineHelpText>
        <label>Document Resolution Field (SIN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fflbx__ImportProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Optional custom import process if you are not using the standard import routine.</inlineHelpText>
        <label>Import Process</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>fflbx__LockboxProcessSetting__c.fflbx__ProgramType__c</field>
                <operation>equals</operation>
                <value>Import</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>fflbx__LockboxProcessSetting__c</referenceTo>
        <relationshipLabel>Bank Lockboxes (Import Process)</relationshipLabel>
        <relationshipName>ImportProcessLockboxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fflbx__MatchingMode__c</fullName>
        <inlineHelpText>Choose how cash matching should be performed. When set to Document, document reference numbers must be supplied. For all other modes, account references must be supplied. See the Help for more information.</inlineHelpText>
        <label>Matching Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Document</fullName>
                    <default>true</default>
                    <label>Document</label>
                </value>
                <value>
                    <fullName>Document Outstanding Value : Highest First</fullName>
                </value>
                <value>
                    <fullName>Document Outstanding Value : Lowest First</fullName>
                </value>
                <value>
                    <fullName>Document Date : Oldest First</fullName>
                </value>
                <value>
                    <fullName>Document Date : Newest First</fullName>
                </value>
                <value>
                    <fullName>Document Number : Oldest First</fullName>
                </value>
                <value>
                    <fullName>Document Number : Newest First</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fflbx__NumberWiretransfer__c</fullName>
        <label>Number / Wire transfer</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fflbx__WriteoffGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Write-off GLA</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Bank Lockboxes (Write-off GLA)</relationshipLabel>
        <relationshipName>WriteoffGLALockboxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Bank Lockbox</label>
    <listViews>
        <fullName>fflbx__All</fullName>
        <columns>NAME</columns>
        <columns>fflbx__BankAccount__c</columns>
        <columns>fflbx__NumberWiretransfer__c</columns>
        <columns>fflbx__Currency__c</columns>
        <columns>fflbx__MatchingMode__c</columns>
        <columns>fflbx__BankChargesGLA__c</columns>
        <columns>fflbx__DiscountGLA__c</columns>
        <columns>fflbx__WriteoffGLA__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Bank Lockbox Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Lockboxes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>